<resources>
    <string name="app_name">Code2Create</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="welcome_slider_1_text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna </string>
    <string name="welcome_slider_1_header">Timeline</string>
    <string name="welcome_slider_2_text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna </string>
    <string name="welcome_slider_2_header">Notifications</string>
    <string name="welcome_slider_3_text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna </string>
    <string name="welcome_slider_3_header">Tracks</string>
    <string name="welcome_slider_4_text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna </string>
    <string name="welcome_slider_4_header">About</string>
    <string name="welcome_slider_5_text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna </string>
    <string name="welcome_slider_5_header">Profile</string>
    <string name="code2create">Code2Create</string>
    <string name="join_discord_header">Join our discord channel for latest updates</string>
    <string name="discord_channel_name">Discord channel name</string>
    <string name="join_now">Join Now</string>
    <string name="skip">Skip</string>
    <string name="next">Next</string>
    <string name="prize_1">First Place</string>
    <string name="prize_2">Second Place</string>
    <string name="prize_3">Third Place</string>
    <string name="prize_4">Meri Bachat Sponsor</string>
    <string name="prize_5">Best Community Voted Solution</string>
    <string name="prize_6">Best Innovative Idea</string>
    <string name="prize_7">Best Pitch</string>
    <string name="prize_8">Best UI/UX Design</string>
    <string name="prize_9">Best First Year Team</string>
    <string name="prize_money_1">Rs. 30,000</string>
    <string name="prize_money_2">Rs. 15,000</string>
    <string name="prize_money_3">Rs. 7,000</string>
    <string name="prize_money_4">Rs. 5,000</string>
    <string name="prize_money_5">Rs. 2,000</string>
    <string name="prize_money_6">Rs. 3,000</string>
    <string name="prize_money_7">Rs. 3,000</string>
    <string name="prize_money_8">Rs. 3,000</string>
    <string name="prize_money_9">Rs. 3,000</string>
    <string name="prizes">Prizes</string>

    <string name="random_text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</string>

    <!-- Profile -->
    <string name="team_name">Team Name</string>
    <string name="code2destroy">Code2Destroy</string>
    <string name="for_any_queries_contact">For any queries, contact:</string>
    <string name="anjali_roy_general_secretary">Anjali Roy (General Secretary)</string>
    <string name="join_our_discord">Join our Discord</string>
    <string name="logout">Logout</string>
    <string name="_91_80178_95012">+91 80178 95012</string>
    <string name="amit_agarwal">Amit Agarwal</string>
    <string name="username_email">username@gmail.com</string>

    <!-- Info and speakers -->
    <string name="faq_qs">Why should I participate in Code2Create?</string>
    <string name="faq_ans">Code2Create is one of the biggest college-level hackathons in the country and promises to be a great learning experience for beginners as well as seasoned developers alike. You’ll end up with a mini-project to show-off on your resume, and with prizes worth 5 lakhs, speaker sessions from industry experts, schwags, and fun in-hack activities, you definitely don’t wanna miss this!</string>
    <string name="faq">FAQ</string>
    <string name="about_us">About Us</string>
    <string name="about_acm_vit">About ACM-VIT</string>
    <string name="about_acm_vit_content">ACM-VIT, one of the most reputed and distinguished technical chapter in VIT, Vellore has been working with vision and determination since it’s inception in 2009, with the aspirations of advancement of computer science as a science and a profession. We are not just an organization, we are a family, united by one cause, working towards making technology more accessible much like our parent organization, ACM. Ask why? Look at our motto, “Because Technology Matters”.</string>
    <string name="acm_website_url">https://acmvit.in/</string>
    <string name="acm_insta_url">https://www.instagram.com/acmvit/</string>
    <string name="acm_linkedin_url">https://www.linkedin.com/company/acm-vit-chapter</string>
    <string name="about_c2c">About C2C</string>
    <string name="about_c2c_content">Code2Create is ACM-VIT\'s flagship event, and it is among the biggest hackathons hosted in VIT. Code2Create is a platform where designers and developers alike collaborate to make something extraordinary. It challenges young minds to think on their feet and work efficiently. The 36-hour long hackathon is filled with intense brainstorming, creating and testing. Industry experts serve as guest judges for the same and host engaging spaces for the participants.</string>
    <string name="c2c_website_url">https://c2c.acmvit.in/</string>
    <string name="c2c_insta_url">https://www.instagram.com/c2c.acmvit/</string>
    <string name="c2c_linkedin_url">https://www.linkedin.com/company/acm-vit-chapter</string>
    <!--Auth-->
    <string name="login">Login</string>
    <string name="enter_email_password">Enter your email and password</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="dont_have_an_account">Don\'t have an account?</string>
    <string name="signup">Sign Up</string>
    <string name="log_in">Log in</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="username">Username</string>
    <string name="enter_your_credentials_to_continue">Enter your email to continue</string>
    <string name="sign_up">Sign Up</string>
    <string name="verify_email">Please verify your email address before logging in.</string>
    <string name="email_mismatch">Email address mismatch</string>
    <string name="email_empty">Email cannot be empty</string>
    <string name="error">Some error occurred</string>
    <string name="email_not_registered">This email is not registered for C2C on HackerEarth.</string>
    <string name="email_sent">Email sent.Please check your email for logging in.</string>
    <string name="error_with_link">Error signing in with email link</string>

    <!--Notification and Speakers-->
    <string name="speakers">Speakers</string>
    <string name="notifications">Notifications</string>
    <string name="sponsors">Sponsors</string>
    <string name="title_sponsor">Title Sponsor</string>
    <string name="live_now">Live Now</string>
    <string name="event_over">Event Over</string>
    <string name="coming_soon">Coming Soon</string>


    <string name="tracks">Tracks</string>
    <string name="placeholder_text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Viverra suspendisse potenti nullam ac tortor vitae purus faucibus. Adipiscing vitae proin sagittis nisl rhoncus mattis rhoncus. Tristique nulla aliquet enim tortor at auctor urna nunc. Tristique et egestas quis ipsum suspendisse ultrices gravida dictum fusce. Ante in nibh mauris cursus mattis molestie a iaculis at. Sodales neque sodales ut etiam sit. Non curabitur gravida arcu ac. Adipiscing vitae proin sagittis nisl. Vitae justo eget magna fermentum iaculis eu. Arcu felis bibendum ut tristique et egestas. Placerat duis ultricies lacus sed turpis tincidunt id. Est ullamcorper eget nulla facilisi etiam dignissim diam quis. Arcu vitae elementum curabitur vitae nunc. Sagittis id consectetur purus ut faucibus. Quisque id diam vel quam elementum pulvinar etiam. Gravida cum sociis natoque penatibus et magnis. Leo a diam sollicitudin tempor id eu nisl nunc. Facilisis leo vel fringilla est. Egestas erat imperdiet sed euismod nisi porta. Auctor augue mauris augue neque gravida in fermentum et sollicitudin. Integer quis auctor elit sed vulputate mi sit amet mauris. Tincidunt id aliquet risus feugiat. Imperdiet massa tincidunt nunc pulvinar sapien. Consequat nisl vel pretium lectus quam id leo. Egestas tellus rutrum tellus pellentesque eu tincidunt. Sed blandit libero volutpat sed cras ornare arcu. Bibendum ut tristique et egestas. At volutpat diam ut venenatis tellus in metus. Ut lectus arcu bibendum at. Nulla facilisi cras fermentum odio eu. Adipiscing bibendum est ultricies integer quis auctor. Id volutpat lacus laoreet non curabitur gravida arcu ac. Venenatis lectus magna fringilla urna porttitor rhoncus. Turpis egestas sed tempus urna et. Tortor dignissim convallis aenean et tortor at risus. Ut aliquam purus sit amet luctus venenatis. Massa massa ultricies mi quis hendrerit dolor magna eget est. Neque gravida in fermentum et. Neque sodales ut etiam sit amet nisl purus in mollis. Non tellus orci ac auctor augue mauris. Nullam ac tortor vitae purus faucibus. Iaculis eu non diam phasellus vestibulum lorem sed risus ultricies. Amet cursus sit amet dictum sit amet justo. Tincidunt praesent semper feugiat nibh sed pulvinar proin gravida hendrerit. Mi sit amet mauris commodo quis imperdiet massa tincidunt nunc.</string>
    <string name="time">Time</string>
    <string name="hrs">HRS</string>
    <string name="mins">MINS</string>
    <string name="secs">SECS</string>
    <string name="hackathon_will_start_in">Hackathon will start in</string>

    <string name="submision_countdown">Submission ends in %s hrs : %s mins : %s secs</string>
    <string name="downloading">Downloading %s</string>
    <string name="downloaded">Downloaded %s</string>
    <string name="network_err_msg">Please Check Your Network Connection</string>
    <string name="randomErr">Experiencing Problems Please Try Again . . .</string>
    <string name="submission_completed">Submission Over</string>
    <string name="dowload_all_tracks_conf_msg">Are you sure you wanna download all the tracks?</string>
    <string name="download_all_tracks_conf_title">Download All tracks</string>
    <string name="open">Open</string>

    <string name="notification_channel_name">Code2Create 2021</string>
    <string name="notification_channel_disp">Updates</string>

</resources>