<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.profile.ProfileFragment">

    <TextView
        android:id="@+id/user_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="64dp"
        android:text="@string/amit_agarwal"
        android:fontFamily="@font/dmsans_bold"
        android:textColor="@android:color/white"
        android:textSize="32sp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/email_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="8dp"
        android:text="@string/username_email"
        android:fontFamily="@font/dmsans_regular"
        android:textColor="@color/secondaryGrey"
        android:textSize="16sp"
        app:layout_constraintTop_toBottomOf="@+id/user_name"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tv_team_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="72dp"
        android:text="@string/team_name"
        android:fontFamily="@font/dmsans_medium"
        android:textColor="@color/secondaryGrey"
        android:textSize="16sp"
        app:layout_constraintTop_toBottomOf="@+id/email_id"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/team_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="8dp"
        android:text="@string/code2destroy"
        android:fontFamily="@font/dmsans_bold"
        android:textColor="@color/primaryGreen"
        android:textSize="20sp"
        app:layout_constraintTop_toBottomOf="@+id/tv_team_name"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/query"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="48dp"
        android:text="@string/for_any_queries_contact"
        android:fontFamily="@font/dmsans_medium"
        android:textColor="@color/secondaryGrey"
        android:textSize="16sp"
        app:layout_constraintTop_toBottomOf="@+id/team_name"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/secretary"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="8dp"
        android:text="@string/anjali_roy_general_secretary"
        android:fontFamily="@font/dmsans_bold"
        android:textColor="@android:color/white"
        android:textSize="16sp"
        app:layout_constraintTop_toBottomOf="@+id/query"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/iv_mobile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginTop="5.67dp"
        android:src="@drawable/ic_mobile"
        app:layout_constraintTop_toBottomOf="@+id/secretary"
        app:layout_constraintStart_toStartOf="parent"  />

    <TextView
        android:id="@+id/contact"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="7dp"
        android:layout_marginTop="4dp"
        android:text="@string/_91_80178_95012"
        android:fontFamily="@font/dmsans_bold"
        android:textColor="@color/primaryGreen"
        android:textSize="16sp"
        app:layout_constraintTop_toBottomOf="@+id/secretary"
        app:layout_constraintStart_toEndOf="@id/iv_mobile" />

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/join_discord_card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:focusable="true"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        app:cardCornerRadius="4dp"
        android:backgroundTint="@color/colorPurple"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/logout" >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <ImageView
                android:id="@+id/discord_icon"
                android:layout_width="33dp"
                android:layout_height="33dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="4dp"
                android:layout_marginStart="12dp"
                android:src="@drawable/ic_discord"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent" />

            <TextView
                android:id="@+id/join_discord"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/join_our_discord"
                android:textSize="16sp"
                android:fontFamily="@font/dmsans_medium"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.card.MaterialCardView>

    <Button
        android:id="@+id/logout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:minHeight="2dp"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:textAllCaps="false"
        android:text="@string/logout"
        android:textSize="14sp"
        android:fontFamily="@font/dmsans_medium"
        android:textColor="@color/secondaryGrey"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>